--- a/signup.html
+++ b/signup.html
@@ -2,11 +2,10 @@
 <html lang="en" class="no-js">
     <body>
 	<form method="post" action="/signup">
-        <input type="text" name="ide" placeholder="ID"/>
         <input type="text" name="first_name" placeholder="First Name"/>
         <input type="text" name="last_name" placeholder="Last Name"/>
-        <input type="text" name="password" placeholder="Password"/>
-        <input type="text" name="repassword" placeholder="Confirm Password"/>
+        <input type="password" name="password" placeholder="Password"/>
+        <input type="password" name="repassword" placeholder="Confirm Password"/>
         <input type="submit" name="submit" Value="GO"/>
     </form>
 	</body>
